# catkin_ws

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/hw04_crist/: .catkin  .rosinstall
devel/.private/hw05_crist/: .catkin  local_setup.sh  setup.sh
devel/.private/hw06_crist/: .catkin  .rosinstall  _setup_util.py  (+1 more)
logs/hw06_crist/: build.cmake.000.log.stderr
src/hw00_crist/: hw00_crist  hw00_crist_01.py  hw00_crist_02.py  hw00_crist_03.py  hw00_crist_04.py  hw00_crist_05.py  hw00_crist_06.py  hw00_crist_07.py  hw00_crist_08.py  hw00_crist_09.py  hw00_crist_10.py  hw00_run
src/hw01_crist/: hw01_crist_01.py  hw01_crist_02.py  hw01_crist_03.py  hw01_crist_04.py  hw01_crist_05.py  hw01_crist_06.py  hw01_crist_07.py  hw01_crist_08.py  hw01_crist_09.py  hw01_crist_10.py  hw01_run
src/hw02_crist/: hw02_crist_01.py  hw02_crist_02.py  hw02_crist_03.py  hw02_crist_05.py
src/hw03_crist/: hw03_crist.sh  hw03_crist.webm
src/hw04_crist/: CMakeLists.txt
src/hw05_crist/: CMakeLists.txt  package.xml
src/hw06_crist/: CMakeLists.txt  package.xml
src/hw06_crist/launch/: hw06_crist.launch
src/hw06_crist/post/: hw06_crist.webm  parse_rosbag.py  subset.bag
src/hw06_crist/scripts/: joy_reporter.py  time_judge.py
src/hw07_crist/: CMakeLists.txt  package.xml
src/hw08_crist/: CMakeLists.txt
src/hw09_crist/: CMakeLists.txt
src/hw10_crist/: CMakeLists.txt
(+121 files in other folders)
